--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -107,6 +107,7 @@ deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.172.205.8;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
 deny 118.194.234.240;
@@ -720,6 +721,7 @@ deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:545c::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1467,6 +1469,7 @@ deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:d604:1:151::2;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac5:abe8::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:ca80::1260:4bff:fea4:19b0;
 deny 2a0f:ca80::2e59:e5ff:fe49:3738;
@@ -1642,6 +1645,7 @@ deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.145.93.133;
 deny 45.148.10.111;
+deny 45.192.242.89;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
