--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -186,7 +186,6 @@ allow 172.105.20.12;
 allow 172.232.209.254;
 allow 172.233.82.41;
 allow 172.234.228.174;
-allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
@@ -205,6 +204,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
@@ -939,7 +939,6 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:ad5c::1;
-allow 2602:f6f6:2:cd1f::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
@@ -1271,6 +1270,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:4140:46c7::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1591,7 +1591,6 @@ allow 37.77.56.238;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
-allow 38.135.24.33;
 allow 38.135.24.72;
 allow 38.135.25.2;
 allow 38.97.116.242;
@@ -1829,7 +1828,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.93.182;
 allow 88.151.194.24;
-allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
@@ -1838,6 +1836,7 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
+allow 89.169.55.72;
 allow 89.234.157.254;
 allow 89.32.41.150;
 allow 89.58.26.216;
