--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -186,7 +186,6 @@ deny 172.105.20.12;
 deny 172.232.209.254;
 deny 172.233.82.41;
 deny 172.234.228.174;
-deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
 deny 173.0.3.111;
@@ -205,6 +204,7 @@ deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
+deny 177.153.51.238;
 deny 177.93.140.66;
 deny 178.162.175.5;
 deny 178.17.170.144;
@@ -939,7 +939,6 @@ deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:ad5c::1;
-deny 2602:f6f6:2:cd1f::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:fa59:4:246::1;
 deny 2602:fa8a:3:a::a;
@@ -1271,6 +1270,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:4140:46c7::2;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1591,7 +1591,6 @@ deny 37.77.56.238;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
-deny 38.135.24.33;
 deny 38.135.24.72;
 deny 38.135.25.2;
 deny 38.97.116.242;
@@ -1829,7 +1828,6 @@ deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.93.182;
 deny 88.151.194.24;
-deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
@@ -1838,6 +1836,7 @@ deny 89.147.110.118;
 deny 89.147.110.154;
 deny 89.147.110.82;
 deny 89.147.111.87;
+deny 89.169.55.72;
 deny 89.234.157.254;
 deny 89.32.41.150;
 deny 89.58.26.216;
