--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -186,7 +186,6 @@ set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.232.209.254;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
-set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
@@ -205,6 +204,7 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.153.51.238;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
@@ -939,7 +939,6 @@ set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
-set_real_ip_from 2602:f6f6:2:cd1f::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:fa59:4:246::1;
 set_real_ip_from 2602:fa8a:3:a::a;
@@ -1271,6 +1270,7 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+set_real_ip_from 2a0b:4140:46c7::2;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1591,7 +1591,6 @@ set_real_ip_from 37.77.56.238;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
-set_real_ip_from 38.135.24.33;
 set_real_ip_from 38.135.24.72;
 set_real_ip_from 38.135.25.2;
 set_real_ip_from 38.97.116.242;
@@ -1829,7 +1828,6 @@ set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.93.182;
 set_real_ip_from 88.151.194.24;
-set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
@@ -1838,6 +1836,7 @@ set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
+set_real_ip_from 89.169.55.72;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.32.41.150;
 set_real_ip_from 89.58.26.216;
