--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -162,6 +162,7 @@ allow 161.97.156.152;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.220.14.54;
+allow 162.220.14.78;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -949,6 +950,7 @@ allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:a00:101:4:216:3eff:fe2f:1c84;
+allow 2604:a00:101:4:216:3eff:fe2f:20c3;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1229,6 +1231,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1731,6 +1734,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
