--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -162,6 +162,7 @@ allow 161.97.156.152;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.220.14.54;
+allow 162.220.14.78;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -975,6 +976,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
