--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -139,6 +139,7 @@ set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:1c84;
+set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:20c3;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
@@ -418,6 +419,7 @@ set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
