--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -76,6 +76,7 @@ allow 107.189.7.168;
 allow 107.189.8.133;
 allow 107.189.8.136;
 allow 107.189.8.181;
+allow 107.189.8.226;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
@@ -148,6 +149,7 @@ allow 149.56.44.47;
 allow 152.32.181.53;
 allow 152.32.199.79;
 allow 152.32.206.127;
+allow 152.53.106.19;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
@@ -159,6 +161,9 @@ allow 160.119.249.240;
 allow 161.129.68.162;
 allow 161.97.156.152;
 allow 162.210.173.17;
+allow 162.210.173.3;
+allow 162.210.173.5;
+allow 162.210.173.6;
 allow 162.216.18.62;
 allow 162.220.14.54;
 allow 162.220.14.78;
@@ -556,7 +561,6 @@ allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.223;
 allow 193.218.118.89;
-allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
 allow 193.26.115.243;
@@ -892,6 +896,7 @@ allow 23.129.64.150;
 allow 23.129.64.151;
 allow 23.129.64.152;
 allow 23.129.64.153;
+allow 23.137.248.100;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -964,6 +969,7 @@ allow 2602:f6f6:2:d31a::1;
 allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
+allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
@@ -1032,6 +1038,7 @@ allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
+allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
@@ -1291,8 +1298,8 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
+allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-allow 2a0b:4140:46c7::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1851,6 +1858,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.93.182;
 allow 88.151.194.24;
+allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
@@ -1859,7 +1867,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.169.55.72;
 allow 89.234.157.254;
 allow 89.32.41.150;
 allow 89.58.26.216;
