--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -211,7 +211,6 @@ allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.153.51.238;
 allow 177.93.140.66;
-allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -240,9 +239,9 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 184.75.221.43;
 allow 185.100.85.132;
 allow 185.100.87.136;
+allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
@@ -555,6 +554,7 @@ allow 193.218.118.112;
 allow 193.218.118.156;
 allow 193.218.118.160;
 allow 193.218.118.173;
+allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.223;
@@ -595,7 +595,7 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.154;
+allow 198.167.206.213;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1182,6 +1182,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1255,6 +1256,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1275,6 +1277,7 @@ allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
+allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
@@ -1520,6 +1523,7 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:a054:113e:490b:da50;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
+allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1756,6 +1760,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1875,6 +1880,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 87.120.93.182;
 allow 88.151.194.24;
 allow 88.80.20.86;
