--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -141,7 +141,6 @@ allow 144.172.84.103;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
-allow 148.113.152.91;
 allow 149.102.153.38;
 allow 149.202.79.129;
 allow 149.56.44.47;
@@ -534,7 +533,6 @@ allow 192.42.116.24;
 allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.42.116.28;
-allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.189.100.194;
@@ -559,6 +557,7 @@ allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.223;
 allow 193.218.118.89;
+allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
 allow 193.26.115.243;
@@ -1049,9 +1048,7 @@ allow 2605:a141:2261:4410::1;
 allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::35c5;
-allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
-allow 2607:5300:60:566f::1;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:18c:0:192::e0:130;
@@ -1494,6 +1491,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:d604:1:151::2;
 allow 2a0e:e701:1198::1;
+allow 2a0e:fa00:0:30::1;
 allow 2a0f:7803:fac5:abe8::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:ca80::1260:4bff:fea4:19b0;
@@ -1726,6 +1724,7 @@ allow 45.90.185.117;
 allow 45.90.185.118;
 allow 45.90.185.119;
 allow 45.91.250.107;
+allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.192;
 allow 45.94.31.68;
@@ -1882,7 +1881,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
